# RT_audio_DSP

./: .gitignore  Cargo.toml  README.md
src/: audio_core.rs  control.rs  dsp.rs  errors.rs  main.rs  math_utils.rs
src/control/: control_utils.rs  socket_handler.rs
src/control/web_server/: server.js  server.rs
src/control/web_server/html/: api.js  band.js  default_style.css  gui.js  index.html  input-knob.js  params.js  utils.js
src/dsp/: band.rs  dynamics.rs  eq.rs  filter.rs  metering.rs  trim.rs
